# pyspeex-noise

./: CHANGELOG.md  mypy.ini  setup.cfg
src/: speex_noise.cpp
