[metadata]
name = pyspeex-noise
author = Michael Hansen
author_email = mike@rhasspy.org
url = https://github.com/rhasspy/pyspeex-noise
description = Noise suppression and automatic gain with speex
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9

[bdist_wheel]
# This makes the wheel tag abi3 (single wheel per platform for all 3.9+)
py_limited_api = cp39

[flake8]
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[isort]
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
indent = "    "
